@@ -58,6 +58,7 @@
   *  - Fixed incorrect signature reported in the CDC class bootloader for the ATMEGA32U2
   *  - Fixed USB_Host_ClearPipeStall() incorrectly determining the endpoint direction from the currently selected pipe
   *  - Fixed JTAG_DEBUG_POINT() and JTAG_DEBUG_BREAK() macros not compiling under pure C99 standards mode
+  *  - Fixed endpoint selection within the CALLBACK_HID_Device_CreateHIDReport() callback function causing broken GET REPORT requests
   *
   *  \section Sec_ChangeLog100807 Version 100807
   *  <b>New:</b>
